terminus-terminal/src/hterm.userCSS.scss
a {
    cursor: pointer;
}

a:hover {
    text-decoration: underline;
}

x-screen {
    transition: 0.125s ease background;
    overflow: visible !important;

    &::-webkit-scrollbar {
      width: 3px;
      background: transparent;
    }

    ::-webkit-scrollbar-thumb {
      background: rgba(255, 255, 255, 0.2);
    }
}

x-row > span {
    display: inline-block;
    height: inherit;
}

@font-face {
    font-family: "monospace-fallback";
    src: url(fonts/Meslo.otf) format("opentype");
}

